infra/k8s/posts-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-mongo
  template:
    metadata:
      labels:
        app: posts-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: posts-mongo-srv
spec:
  selector:
    app: posts-mongo
  ports:
    - port: 27017
      targetPort: 27017
