infra/k8s/posts_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: posts
spec:
    replicas: 1
    selector:
        matchLabels:
            app: posts

    template:
        metadata:
            labels:
                app: posts

        spec:
            containers:
                - name: posts
                  image: jassymon/posts
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 3002
---

apiVersion: v1
kind: Service
metadata:
    name: posts-srv 
spec:
    selector:
            app: posts
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3002
