infra/k8s/users_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users
spec:
    replicas: 1
    selector:
        matchLabels:
            app: users

    template:
        metadata:
            labels:
                app: users

        spec:
            containers:
                - name: users
                  image: jassymon/users
                  imagePullPolicy: Never
                  ports:
                        - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
    name: users-srv 
spec:
    selector:
            app: users
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3001
