infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 80

          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 80
